<resources>
    <string name="app_name">Tiles Up!</string>
    <string name="description">Click buttons with matching colors</string>
    <string name="start">Start</string>
    <string name="restart">Restart</string>
    <string name="time">Time left:</string>
    <string name="points">Points:</string>
    <string name="counter">0</string>
    <string name="timer">00:00</string>
    <string name="title">Tiles Up!</string>
    <string name="start_game">Start game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="exit">Exit</string>
    <string name="menu">menu</string>
    <string name="welcome">Welcome</string>
    <string name="times_up">Time\'s up!</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="country">Country</string>
</resources>