<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="5"
    android:background="@color/cardview_shadow_start_color"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingTop="12dp"
    tools:context=".GameActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:background="#8633ff"
        android:text="@string/start"
        android:textColorHint="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#8633ff"
        android:text="@string/restart"
        android:textColorHint="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/pointsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/points"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pointsText" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:text="@string/time"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timer" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_00_00"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boxBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions">

        <Button
            android:id="@+id/btn1"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn6"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn7"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn9"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn11"
            app:layout_constraintEnd_toStartOf="@+id/btn7"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn12"
            app:layout_constraintEnd_toStartOf="@+id/btn8"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn14"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn15"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn14"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn14"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn19"
            app:layout_constraintStart_toEndOf="@+id/btn13"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn13"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn12"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn17"
            app:layout_constraintEnd_toStartOf="@+id/btn13"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn11"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn16"
            app:layout_constraintEnd_toStartOf="@+id/btn12"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn10"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn9"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn25"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn24"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn16"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn21"
            app:layout_constraintEnd_toStartOf="@+id/btn17"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn20"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn19"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn19"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn24"
            app:layout_constraintStart_toEndOf="@+id/btn18"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn18"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn17"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn22"
            app:layout_constraintEnd_toStartOf="@+id/btn18"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn24"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn23"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn23"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn22"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn23"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn21"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:clickable="false"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn22"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ButtonStyle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
